package pprog.domain;

public class HRM {
}
