@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle

hide methods

title Domain Model

class Organization {

}

class Job {
    name
    description

}

class HRM {
    name
    email
    phone
}

class Collaborator {
    name
    email
    phone
    skills
}

Organization "1" - "0..*" HRM: has >
HRM "1" -- "*" Job : register   >
Collaborator "*" -- "*" Job : has >
Job "*" -- "*" Collaborator: assigned to >

@enduml